--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "antd": "^4.21.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
     "framer-motion": "^6.3.3",
+    "i": "^0.3.7",
+    "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^18.0.0",
