--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "antd": "^4.21.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
     "framer-motion": "^6.3.11",
     "install": "^0.13.0",
     "npm": "^8.12.1",
